--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,14 @@
             <version>3.2</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-annotations -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.3.3</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
